[gd_scene load_steps=12 format=3 uid="uid://b45c1oaixvrph"]

[ext_resource type="Script" path="res://scripts/CargoTarget.gd" id="1_gbqjm"]
[ext_resource type="Texture2D" uid="uid://cbccv6axihlq5" path="res://sprites/CargoZone.png" id="2_etmwj"]
[ext_resource type="Material" uid="uid://dvq254oehbqvl" path="res://materials/unshaded_ingame_ui.tres" id="2_lkuok"]
[ext_resource type="AudioStream" uid="uid://r50xt5xnxbsg" path="res://audio/muzik/VictoryJingle.wav" id="4_k01jd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rn1pc"]
size = Vector2(48, 8)

[sub_resource type="Animation" id="Animation_ak2oa"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CompleteLabel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CompleteLabel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CompleteLabel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CompleteLabel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_j52kh"]
resource_name = "cargo_delivered"
length = 2.0
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("CompleteLabel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("CompleteLabel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("CompleteLabel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CompleteLabel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pbn72"]
_data = {
"RESET": SubResource("Animation_ak2oa"),
"cargo_delivered": SubResource("Animation_j52kh")
}

[sub_resource type="Animation" id="Animation_go68h"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_p810n"]
resource_name = "bump"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-16, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0, -16, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tn3dw"]
_data = {
"RESET": SubResource("Animation_go68h"),
"bump": SubResource("Animation_p810n")
}

[node name="CargoTarget" type="Area2D"]
position = Vector2(721, 352)
script = ExtResource("1_gbqjm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rn1pc")

[node name="CompleteLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 1
material = ExtResource("2_lkuok")
offset_left = -72.0
offset_top = -32.0
offset_right = 76.0
offset_bottom = -6.0
text = "CARGO DELIVERED!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CargoTargetAnimation" type="AnimationPlayer" parent="."]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_pbn72")
}

[node name="CargoZoneSprite" type="Sprite2D" parent="."]
material = ExtResource("2_lkuok")
position = Vector2(0, -8)
texture = ExtResource("2_etmwj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CargoZoneSprite"]
autoplay = "bump"
libraries = {
"": SubResource("AnimationLibrary_tn3dw")
}

[node name="VictoryJingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_k01jd")
volume_db = -3.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
